--- a/Views/modules/css/style.css
+++ b/Views/modules/css/style.css
@@ -91,3 +91,46 @@ footer{
     justify-content: center;    
     align-items: center;   
 }
+
+@media(max-width: 700px){
+
+    html{
+        font-size: 55%;
+    }    
+}
+
+@media(max-width: 660px){
+
+
+    .text-container{
+        width: 100px;
+        font-size: 1.3rem;
+        margin-right: 15px;
+    }
+
+    form input{
+        width: 150px;
+    }
+}
+
+@media(max-width: 500px){
+
+    h2{
+        font-size: 1.7rem;
+    }
+
+    .text-container{
+        margin: 5px;
+    }
+}
+
+@media(max-width: 450px){
+    .text-container a{
+        margin: 3px;
+        font-size: 1.1rem;
+    }
+
+    form input{
+        width: 100px;
+    }
+}
