pagina de listagem

--- a/App/View/modules/css/style.css
+++ b/App/View/modules/css/style.css
@@ -31,7 +31,7 @@ nav{
     
     
     display: grid;
-    grid-template-columns: 1fr 0.5fr 0.5fr 1fr 0.5fr;        
+    grid-template-columns: 1fr 0.5fr 0.5fr 0.5fr 0.5fr 1fr;        
     justify-content: space-around;
     align-items: center;
 }
